rpi5/overseerr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  serviceName: overseerr
  template:
    metadata:
      name: overseerr
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: ghcr.io/sct/overseerr:develop@sha256:568f126f69663cf764d12bf19ba5a250be2246cca49852e556f363d0acac2603
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: config
          resources:
            requests:
              cpu: 50m
              memory: 500Mi
            limits:
              cpu: 250m
              memory: 1Gi
          livenessProbe:
            httpGet:
              port: 5055
              path: /api/v1/status
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 5055
              path: /api/v1/status
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
            runAsUser: 1000
            runAsGroup: 1000
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
